--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!--<script src="./dist/bundle.js"></script>-->
 
   <!--开发模式下的包路径-->
-  <script src="/static/bundle.js"></script>
+  <script src="./dist/bundle.js"></script>
 
 </body>
 </html>
